adiciona requisito 6