@@ -1,20 +1,19 @@
 package unit.JsonFiles;
 
 import entities.Loja;
+import org.json.JSONArray;
 import org.json.JSONObject;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import repositories.LojaRepository;
 import util.JsonFileCRUDLojaUtil;
 import util.JsonFileUtil;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.*;
-import static org.mockito.Mockito.times;
-import org.json.JSONArray;
+
 public class JsonFileCRUDLojaUtilTest {
 
     Loja loja = new Loja("josé", "hugo@gmail.com", "mustbe a hash", "701.254.231-72", "myhome");
@@ -22,12 +21,6 @@ public class JsonFileCRUDLojaUtilTest {
     List<Loja> lojaArray = Arrays.asList(loja, new Loja());
     JSONArray getFilledArray;
 
-    class MyJsonFileUtil extends JsonFileUtil{
-        @Override
-        public JSONArray loadJsonArray(String path){
-            return super.loadJsonArray(path);
-        }
-    }
     @BeforeEach
     void addToArray() {
         JSONObject lojaJSON = new JSONObject();
@@ -36,9 +29,10 @@ public class JsonFileCRUDLojaUtilTest {
         lojaJSON.put("endereco", loja.getEndereco());
         lojaJSON.put("senha", loja.getSenha());
         lojaJSON.put("cnpj", loja.getCnpj());
-        List<JSONObject> array = Arrays.asList(lojaJSON);
+        List<JSONObject> array = List.of(lojaJSON);
         getFilledArray = new JSONArray(array);
     }
+
     @Test
     public void getLojaByCnpj() throws Exception {
         String cnpj = loja.getCnpj();
@@ -50,9 +44,10 @@ public class JsonFileCRUDLojaUtilTest {
         assertTrue(jsonFileCRUD.getLojaByCnpj(cnpj).equals(loja));
         verify(mock, times(1)).loadJsonArray(filePath);
     }
+
     @Test
     public void getAllLojas() throws Exception {
-        List<Loja> result = Arrays.asList(loja);
+        List<Loja> result = Collections.singletonList(loja);
         MyJsonFileUtil mock = mock(MyJsonFileUtil.class);
         JsonFileCRUDLojaUtil jsonFileCRUD = new JsonFileCRUDLojaUtil(mock);
         String filePath = jsonFileCRUD.getFilePath();
@@ -61,6 +56,7 @@ public class JsonFileCRUDLojaUtilTest {
         assertTrue(jsonFileCRUD.getAllLojas().equals(result));
         verify(mock, times(1)).loadJsonArray(filePath);
     }
+
     @Test
     public void createLoja() throws Exception {
         MyJsonFileUtil mock = mock(MyJsonFileUtil.class);
@@ -71,6 +67,7 @@ public class JsonFileCRUDLojaUtilTest {
         jsonFileCRUD.createLoja(loja);
         verify(mock, times(1)).loadJsonArray(filePath);
     }
+
     @Test
     public void updateLoja() throws Exception {
         String cnpj = loja.getCnpj();
@@ -88,6 +85,7 @@ public class JsonFileCRUDLojaUtilTest {
         jsonFileCRUD.updateLoja(cnpj, alteredLoja);
         verify(mock, times(1)).loadJsonArray(filePath);
     }
+
     @Test
     public void deleteLoja() throws Exception {
         String cnpj = loja.getCnpj();
@@ -98,5 +96,12 @@ public class JsonFileCRUDLojaUtilTest {
         when(mock.loadJsonArray(filePath)).thenReturn(getFilledArray);
         jsonFileCRUD.deleteLoja(cnpj);
         verify(mock, times(1)).loadJsonArray(filePath);
+    }
+
+    class MyJsonFileUtil extends JsonFileUtil {
+        @Override
+        public JSONArray loadJsonArray(String path) {
+            return super.loadJsonArray(path);
+        }
     }
 }
